<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:background="@color/green_500"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/select_expense_category"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/s_category_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="wrap_content"
            android:entries="@array/сategoriesExpenses" />

        <EditText
            android:id="@+id/et_input_expenses_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="10"
            android:hint="@string/str_input_expenses_sum"
            android:inputType="numberDecimal"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_add_expenses_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_expenses_sum"
            android:textColor="@color/red_700"
            android:textSize="18sp"
            android:onClick="addExpensesSum"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>